--- a/slides/2.html
+++ b/slides/2.html
@@ -1,12 +1,2 @@
 !style=title
-<title font="databet">Thanks for listening</title>
-
-<author>
-<big>Matthew Scroggs</big>
-<spacing>
-<block align left>
-<icon website><mscroggs.co.uk><br />
-<icon bluesky>@mscroggs.co.uk<br />
-<icon mastodon>@mscroggs@mathstodon.xyz
-</block>
-</author>
+<center style='margin-top:1vh'>End of presentation. Press F11 to exit full screen.</center>
