--- a/slides/1.html
+++ b/slides/1.html
@@ -1,5 +1,5 @@
 !style=title
-<title font="databet">Thanks for listening</title>
+<title>Thanks for listening</title>
 
 <author>
 <big>Matthew Scroggs</big>
