--- a/slides/2.html
+++ b/slides/2.html
@@ -1,2 +1,27 @@
-!style=title
-<center style='margin-top:1vh'>End of presentation. Press F11 to exit full screen.</center>
+\[n=1\]
+\[1^3 = (1)^2\]
+<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
+<for i in range(1)><rect width="98" height="98" x="{{1+i}}" y="{{1+i/2}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+</svg>
+<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
+<rect width="98" height="98" x="1" y="1" fill="white" />
+<for x in range(2)>
+<line x1="{{1+98*x/1}}" y1="1" x2="{{1+98*x/1}}" y2="99" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
+<for y in range(2)>
+<line x1="1" y1="{{1+98*y/1}}" x2="99" y2="{{1+98*y/1}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
+</svg>
+<newslide>
+\[n=1\]
+\[1^3 = (1)^2\]
+<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
+<rect width="98" height="98" x="1" y="1" fill="white" />
+<for x in range(2)>
+<line x1="{{1+98*x/1}}" y1="1" x2="{{1+98*x/1}}" y2="99" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
+<for y in range(2)>
+<line x1="1" y1="{{1+98*y/1}}" x2="99" y2="{{1+98*y/1}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
+<rect width="98" height="98" x="1" y="1" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</svg>
