--- a/_template.html
+++ b/_template.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Matthew Scroggs: The Databet (MathsJam 2024)</title>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <link rel="stylesheet" href="_static/sty.css" type="text/css">
 <script type='text/javascript'>
 {js}
