--- a/slides/1.html
+++ b/slides/1.html
@@ -94,5 +94,5 @@
 <div style='position:absolute;top:5vh;left:50vw;transform:translate(-50%, -50%)'>
 mscroggs.co.uk/squares
 </div>
-<iframe src="https://mscroggs.co.uk/squares" style="position:absolute;top:15vh;bottom:5vh;left:5vw;right:5vw;width:90vw;height:80vh"></iframe>
+<img src="_static/squares-page.png" style="position:absolute;top:15vh;bottom:5vh;left:5vw;right:5vw;width:90vw"></iframe>
 
