--- a/slides/1.html
+++ b/slides/1.html
@@ -1,98 +1,6 @@
-<div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i^3=2025=\left(\sum_{i=1}^9i\right)^2\]
-</div>
-<newslide>
-<div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i^3=2025=\left(\sum_{i=1}^9i\right)^2\]
-</div>
-<div style='position:absolute;top:25%;left:50%;transform:translate(-50%, -50%)'>
-\[1^3+2^3+3^3+4^3+5^3+6^3+7^3+8^3+9^3=2025\]
-</div>
-<newslide>
-<div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i^3=2025=\left(\sum_{i=1}^9i\right)^2\]
-</div>
-<div style='position:absolute;top:25%;left:50%;transform:translate(-50%, -50%)'>
-\[1^3+2^3+3^3+4^3+5^3+6^3+7^3+8^3+9^3=2025\]
-</div>
-<div style='position:absolute;top:75%;left:50%;transform:translate(-50%, -50%)'>
-\[(1+2+3+4+5+6+7+8+9)^2=2025\]
-</div>
-<newslide>
-<div style='position:absolute;top:30%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i^3=2025=\left(\sum_{i=1}^9i\right)^2\]
-</div>
-<newslide>
-<div style='position:absolute;top:30%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i^3=2025=\left(\sum_{i=1}^9i\right)^2\]
-</div>
-<div style='position:absolute;top:70%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i\times i^2=45^2\]
-</div>
-<newslide>
-<div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i\times i^2=45^2\]
-</div>
-<newslide>
-<div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i\times i^2=45^2\]
-</div>
-<svg viewBox="0 0 90 40" xmlns="http://www.w3.org/2000/svg" width="35vw" style="position:absolute;left:3vw;top:50vh;transform:translate(0%, -50%)">
-<for i in range(1)><rect width="2" height="2" x="{{1+i}}" y="{{1+i/2}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(2)><rect width="4" height="4" x="{{4+i}}" y="{{1+i/2}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(3)><rect width="6" height="6" x="{{11+i}}" y="{{1+i/2}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(4)><rect width="8" height="8" x="{{21+i}}" y="{{1+i/2}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(5)><rect width="10" height="10" x="{{34+i}}" y="{{1+i/2}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(6)><rect width="12" height="12" x="{{50+i}}" y="{{1+i/2}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(7)><rect width="14" height="14" x="{{69+i}}" y="{{1+i/2}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(8)><rect width="16" height="16" x="{{1+i}}" y="{{17+i/2}}" fill="#BE0AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(9)><rect width="18" height="18" x="{{26+i}}" y="{{17+i/2}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-</svg>
-<newslide>
-<div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i\times i^2=45^2\]
-</div>
-<svg viewBox="0 0 90 40" xmlns="http://www.w3.org/2000/svg" width="35vw" style="position:absolute;left:3vw;top:50vh;transform:translate(0%, -50%)">
-<for i in range(1)><rect width="2" height="2" x="{{1+i}}" y="{{1+i/2}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(2)><rect width="4" height="4" x="{{4+i}}" y="{{1+i/2}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(3)><rect width="6" height="6" x="{{11+i}}" y="{{1+i/2}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(4)><rect width="8" height="8" x="{{21+i}}" y="{{1+i/2}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(5)><rect width="10" height="10" x="{{34+i}}" y="{{1+i/2}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(6)><rect width="12" height="12" x="{{50+i}}" y="{{1+i/2}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(7)><rect width="14" height="14" x="{{69+i}}" y="{{1+i/2}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(8)><rect width="16" height="16" x="{{1+i}}" y="{{17+i/2}}" fill="#BE0AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(9)><rect width="18" height="18" x="{{26+i}}" y="{{17+i/2}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-</svg>
-<svg viewBox="0 0 92 92" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:3vw;top:50vh;transform:translate(0%, -50%)">
-<rect width="98" height="98" x="1" y="1" fill="white" />
-<for x in range(46)>
-<line x1="{{1+2*x}}" y1="1" x2="{{1+2*x}}" y2="91" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
-</for>
-<for y in range(46)>
-<line x1="1" y1="{{1+2*y}}" x2="91" y2="{{1+2*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
-</for>
-</svg>
-<newslide>
-<div style='position:absolute;top:5vh;left:50vw;transform:translate(-50%, -50%)'>
-mscroggs.co.uk/squares
-</div>
-<img src="_static/squares-page.png" style="position:absolute;top:15vh;bottom:5vh;left:5vw;right:5vw;width:90vw"></iframe>
-<newslide>
-<div style='position:absolute;top:30%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i^3=\left(\sum_{i=1}^9i\right)^2\]
-</div>
-<newslide>
-<div style='position:absolute;top:30%;left:50%;transform:translate(-50%, -50%)'>
-\[\sum_{i=1}^9i^3=\left(\sum_{i=1}^9i\right)^2\]
-</div>
-<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" width="50vw" style="position:absolute;left:50vw;top:50vh;transform:translate(-50%, -50%)">
-<line x1="27" y1="22" x2="31" y2="19" stroke="red" stroke-width="0.6%" stroke-linecap="round" />
-<line x1="58" y1="22" x2="62" y2="19" stroke="red" stroke-width="0.6%" stroke-linecap="round" />
-</svg>
-<div style='position:absolute;top:19vh;left:55vw;transform:translate(-50%, -50%)'>
-\[n\]
-</div>
-<div style='position:absolute;top:19vh;left:39.5vw;transform:translate(-50%, -50%)'>
-\[n\]
-</div>
-
+<center>
+<img src='_static/chalkdust.png' style='width:47vw;padding:0.5vw'>
+<img src='_static/emf.png' style='width:47vw;padding:0.5vw'>
+<img src='_static/finitegroup.png' style='width:47vw;padding:0.5vw'>
+<img src='_static/advent.png' style='width:47vw;padding:0.5vw'>
+</center>
