--- a/slides/10.html
+++ b/slides/10.html
@@ -1,35 +1,16 @@
-!enter_slide=start8
-!exit_slide=stop8
-
-<script>
-var ii8 = false;
-
-var sol8 = <array:solutions8>;
-
-function start8() {
-    update8();
-    ii8 = setInterval(update8, 200);
-}
-function stop8() {
-    if (ii8 !== false) {
-        clearInterval(ii8)
-    }
-}
-function update8() {
-    var colors = ["black", "#FFD300", "#DEFF0A", "#A1FF0A", "#0AFF99", "#0AEFFF", "#147DF5", "#580AFF", "#BE0AFF"];
-    var randsol = sol8[Math.floor(Math.random() * sol8.length)];
-    var img = ""
-    for (var i = 0; i < randsol.length; i++) {
-        img += "<rect width='" + (randsol[i][2] * 2.5) + "' height='" + (randsol[i][2] * 2.5) + "' x='" + (1 + randsol[i][0]*2.5) + "' y='" + (1 + randsol[i][1]*2.5) + "' fill='" + colors[randsol[i][2]] + "' stroke='black' stroke-width='0.2%' stroke-linecap='round' />"
-    }
-    
-    document.getElementById("grid8").innerHTML = img
-}
-
-</script>
 \[n=8\]
 \[1^3+2^3+\dots+8^3 = (1+2+\dots+8)^2\]
-<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh" id='grid8'>
+<svg viewBox="0 0 137 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
+<for i in range(1)><rect width="2.5" height="2.5" x="{{1+i*1.25}}" y="{{1+i*0.625}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(2)><rect width="5" height="5" x="{{4.75+i*1.25}}" y="{{1+i*0.625}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(3)><rect width="7.5" height="7.5" x="{{12.25+i*1.25}}" y="{{1+i*0.625}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(4)><rect width="10" height="10" x="{{23.5+i*1.25}}" y="{{1+i*0.625}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(5)><rect width="12.5" height="12.5" x="{{38.5+i*1.25}}" y="{{1+i*0.625}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(6)><rect width="15" height="15" x="{{57.25+i*1.25}}" y="{{1+i*0.625}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(7)><rect width="17.5" height="17.5" x="{{79.75+i*1.25}}" y="{{1+i*0.625}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(8)><rect width="20" height="20" x="{{106+i*1.25}}" y="{{1+i*0.625}}" fill="#BE0AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+</svg>
+<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
 <rect width="98" height="98" x="1" y="1" fill="white" />
 <for x in range(37)>
 <line x1="{{1+2.5*x}}" y1="1" x2="{{1+2.5*x}}" y2="91" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
@@ -38,7 +19,3 @@ function update8() {
 <line x1="1" y1="{{1+2.5*y}}" x2="91" y2="{{1+2.5*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
 </svg>
-
-<div style='position:absolute;top:50%;left:25%;transform:translate(-50%, -50%);color:green;font-size:10vh'>
-2332 solutions
-</div>
