--- a/slides/11.html
+++ b/slides/11.html
@@ -1,37 +1,44 @@
-!enter_slide=start9
-!exit_slide=stop9
+!enter_slide=start8
+!exit_slide=stop8
 
 <script>
-var ii9 = false;
+var ii8 = false;
 
-var sol9 = <array:solutions9>;
+var sol8 = <array:solutions8>;
 
-function start9() {
-    update9();
-    ii9 = setInterval(update9, 200);
+function start8() {
+    update8();
+    ii8 = setInterval(update8, 200);
 }
-function stop9() {
-    if (ii9 !== false) {
-        clearInterval(ii9)
+function stop8() {
+    if (ii8 !== false) {
+        clearInterval(ii8)
     }
 }
-function update9() {
-    var colors = ["black", "#FFD300", "#DEFF0A", "#A1FF0A", "#0AFF99", "#0AEFFF", "#147DF5", "#580AFF", "#BE0AFF", "#FFD300"];
-    var randsol = sol9[Math.floor(Math.random() * sol9.length)];
+function update8() {
+    var colors = ["black", "#FFD300", "#DEFF0A", "#A1FF0A", "#0AFF99", "#0AEFFF", "#147DF5", "#580AFF", "#BE0AFF"];
+    var randsol = sol8[Math.floor(Math.random() * sol8.length)];
     var img = ""
     for (var i = 0; i < randsol.length; i++) {
-        img += "<rect width='" + (randsol[i][2] * 2) + "' height='" + (randsol[i][2] * 2) + "' x='" + (1 + randsol[i][0]*2) + "' y='" + (1 + randsol[i][1]*2) + "' fill='" + colors[randsol[i][2]] + "' stroke='black' stroke-width='0.2%' stroke-linecap='round' />"
+        img += "<rect width='" + (randsol[i][2] * 2.5) + "' height='" + (randsol[i][2] * 2.5) + "' x='" + (1 + randsol[i][0]*2.5) + "' y='" + (1 + randsol[i][1]*2.5) + "' fill='" + colors[randsol[i][2]] + "' stroke='black' stroke-width='0.2%' stroke-linecap='round' />"
     }
     
-    document.getElementById("grid9").innerHTML = img
+    document.getElementById("grid8").innerHTML = img
 }
 
 </script>
-\[n=9\]
-\[1^3+2^3+\dots+9^3 = (1+2+\dots+9)^2\]
-<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh" id='grid9'>
+\[n=8\]
+\[1^3+2^3+\dots+8^3 = (1+2+\dots+8)^2\]
+<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh" id='grid8'>
+<rect width="98" height="98" x="1" y="1" fill="white" />
+<for x in range(37)>
+<line x1="{{1+2.5*x}}" y1="1" x2="{{1+2.5*x}}" y2="91" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
+<for y in range(37)>
+<line x1="1" y1="{{1+2.5*y}}" x2="91" y2="{{1+2.5*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
 </svg>
 
 <div style='position:absolute;top:50%;left:25%;transform:translate(-50%, -50%);color:green;font-size:10vh'>
-216285 solutions
+2332 solutions
 </div>
