--- a/slides/15.html
+++ b/slides/15.html
@@ -1,2 +1,12 @@
 !style=title
-<center style='margin-top:1vh'>End of presentation. Press F11 to exit full screen.</center>
+<title>Thanks for listening</title>
+
+<author>
+<big>Matthew Scroggs</big>
+<spacing>
+<block align left>
+<icon website><mscroggs.co.uk><br />
+<icon bluesky>@mscroggs.co.uk<br />
+<icon mastodon>@mscroggs@mathstodon.xyz
+</block>
+</author>
