--- a/slides/7.html
+++ b/slides/7.html
@@ -1,40 +1,38 @@
-\[n=6\]
-\[1^3+2^3+3^3+4^3+5^3+6^3 = (1+2+3+4+5+6)^2\]
-<svg viewBox="0 0 129 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
-<for i in range(1)><rect width="4" height="4" x="{{1+i*2}}" y="{{1+i}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(2)><rect width="8" height="8" x="{{8+i*2}}" y="{{1+i}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(3)><rect width="12" height="12" x="{{20+i*2}}" y="{{1+i}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(4)><rect width="16" height="16" x="{{38+i*2}}" y="{{1+i}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(5)><rect width="20" height="20" x="{{62+i*2}}" y="{{1+i}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(6)><rect width="24" height="24" x="{{92+i*2}}" y="{{1+i}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+\[n=5\]
+\[1^3+2^3+3^3+4^3+5^3 = (1+2+3+4+5)^2\]
+<svg viewBox="0 0 137 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
+<for i in range(1)><rect width="6" height="6" x="{{1+i*3}}" y="{{1+i*1.5}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(2)><rect width="12" height="12" x="{{10+i*3}}" y="{{1+i*1.5}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(3)><rect width="18" height="18" x="{{28+i*3}}" y="{{1+i*1.5}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(4)><rect width="24" height="24" x="{{55+i*3}}" y="{{1+i*1.5}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(5)><rect width="30" height="30" x="{{91+i*3}}" y="{{1+i*1.5}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
 </svg>
 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
 <rect width="98" height="98" x="1" y="1" fill="white" />
-<for x in range(22)>
-<line x1="{{1+4*x}}" y1="1" x2="{{1+4*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for x in range(16)>
+<line x1="{{1+6*x}}" y1="1" x2="{{1+6*x}}" y2="91" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
-<for y in range(22)>
-<line x1="1" y1="{{1+4*y}}" x2="85" y2="{{1+4*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for y in range(16)>
+<line x1="1" y1="{{1+6*y}}" x2="91" y2="{{1+6*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
 </svg>
 <newslide>
-\[n=6\]
-\[1^3+2^3+3^3+4^3+5^3+6^3 = (1+2+3+4+5+6)^2\]
-<svg viewBox="0 0 129 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
-<for i in range(1)><rect width="4" height="4" x="{{1+i*2}}" y="{{1+i}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(2)><rect width="8" height="8" x="{{8+i*2}}" y="{{1+i}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(3)><rect width="12" height="12" x="{{20+i*2}}" y="{{1+i}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(4)><rect width="16" height="16" x="{{38+i*2}}" y="{{1+i}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(5)><rect width="20" height="20" x="{{62+i*2}}" y="{{1+i}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(6)><rect width="24" height="24" x="{{92+i*2}}" y="{{1+i}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+\[n=5\]
+\[1^3+2^3+3^3+4^3+5^3 = (1+2+3+4+5)^2\]
+<svg viewBox="0 0 137 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
+<for i in range(1)><rect width="6" height="6" x="{{1+i*3}}" y="{{1+i*1.5}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(2)><rect width="12" height="12" x="{{10+i*3}}" y="{{1+i*1.5}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(3)><rect width="18" height="18" x="{{28+i*3}}" y="{{1+i*1.5}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(4)><rect width="24" height="24" x="{{55+i*3}}" y="{{1+i*1.5}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(5)><rect width="30" height="30" x="{{91+i*3}}" y="{{1+i*1.5}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
 </svg>
 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
 <rect width="98" height="98" x="1" y="1" fill="white" />
-<for x in range(22)>
-<line x1="{{1+4*x}}" y1="1" x2="{{1+4*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for x in range(16)>
+<line x1="{{1+6*x}}" y1="1" x2="{{1+6*x}}" y2="91" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
-<for y in range(22)>
-<line x1="1" y1="{{1+4*y}}" x2="85" y2="{{1+4*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for y in range(16)>
+<line x1="1" y1="{{1+6*y}}" x2="91" y2="{{1+6*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
 </svg>
 <div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:red;font-size:10vh'>
