--- a/slides/8.html
+++ b/slides/8.html
@@ -1,42 +1,40 @@
-\[n=7\]
-\[1^3+2^3+\dots+7^3 = (1+2+\dots+7)^2\]
+\[n=6\]
+\[1^3+2^3+3^3+4^3+5^3+6^3 = (1+2+3+4+5+6)^2\]
 <svg viewBox="0 0 129 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
-<for i in range(1)><rect width="3" height="3" x="{{1+i*1.5}}" y="{{1+i*0.75}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(2)><rect width="6" height="6" x="{{5.5+i*1.5}}" y="{{1+i*0.75}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(3)><rect width="9" height="9" x="{{14.5+i*1.5}}" y="{{1+i*0.75}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(4)><rect width="12" height="12" x="{{28+i*1.5}}" y="{{1+i*0.75}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(5)><rect width="15" height="15" x="{{46+i*1.5}}" y="{{1+i*0.75}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(6)><rect width="18" height="18" x="{{68.5+i*1.5}}" y="{{1+i*0.75}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(7)><rect width="21" height="21" x="{{95.5+i*1.5}}" y="{{1+i*0.75}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(1)><rect width="4" height="4" x="{{1+i*2}}" y="{{1+i}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(2)><rect width="8" height="8" x="{{8+i*2}}" y="{{1+i}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(3)><rect width="12" height="12" x="{{20+i*2}}" y="{{1+i}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(4)><rect width="16" height="16" x="{{38+i*2}}" y="{{1+i}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(5)><rect width="20" height="20" x="{{62+i*2}}" y="{{1+i}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(6)><rect width="24" height="24" x="{{92+i*2}}" y="{{1+i}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
 </svg>
 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
 <rect width="98" height="98" x="1" y="1" fill="white" />
-<for x in range(29)>
-<line x1="{{1+3*x}}" y1="1" x2="{{1+3*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for x in range(22)>
+<line x1="{{1+4*x}}" y1="1" x2="{{1+4*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
-<for y in range(29)>
-<line x1="1" y1="{{1+3*y}}" x2="85" y2="{{1+3*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for y in range(22)>
+<line x1="1" y1="{{1+4*y}}" x2="85" y2="{{1+4*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
 </svg>
 <newslide>
-\[n=7\]
-\[1^3+2^3+\dots+7^3 = (1+2+\dots+7)^2\]
+\[n=6\]
+\[1^3+2^3+3^3+4^3+5^3+6^3 = (1+2+3+4+5+6)^2\]
 <svg viewBox="0 0 129 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
-<for i in range(1)><rect width="3" height="3" x="{{1+i*1.5}}" y="{{1+i*0.75}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(2)><rect width="6" height="6" x="{{5.5+i*1.5}}" y="{{1+i*0.75}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(3)><rect width="9" height="9" x="{{14.5+i*1.5}}" y="{{1+i*0.75}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(4)><rect width="12" height="12" x="{{28+i*1.5}}" y="{{1+i*0.75}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(5)><rect width="15" height="15" x="{{46+i*1.5}}" y="{{1+i*0.75}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(6)><rect width="18" height="18" x="{{68.5+i*1.5}}" y="{{1+i*0.75}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(7)><rect width="21" height="21" x="{{95.5+i*1.5}}" y="{{1+i*0.75}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(1)><rect width="4" height="4" x="{{1+i*2}}" y="{{1+i}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(2)><rect width="8" height="8" x="{{8+i*2}}" y="{{1+i}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(3)><rect width="12" height="12" x="{{20+i*2}}" y="{{1+i}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(4)><rect width="16" height="16" x="{{38+i*2}}" y="{{1+i}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(5)><rect width="20" height="20" x="{{62+i*2}}" y="{{1+i}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(6)><rect width="24" height="24" x="{{92+i*2}}" y="{{1+i}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
 </svg>
 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
 <rect width="98" height="98" x="1" y="1" fill="white" />
-<for x in range(29)>
-<line x1="{{1+3*x}}" y1="1" x2="{{1+3*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for x in range(22)>
+<line x1="{{1+4*x}}" y1="1" x2="{{1+4*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
-<for y in range(29)>
-<line x1="1" y1="{{1+3*y}}" x2="85" y2="{{1+3*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for y in range(22)>
+<line x1="1" y1="{{1+4*y}}" x2="85" y2="{{1+4*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
 </svg>
 <div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:red;font-size:10vh'>
