--- a/slides/9.html
+++ b/slides/9.html
@@ -1,21 +1,44 @@
-\[n=8\]
-\[1^3+2^3+\dots+8^3 = (1+2+\dots+8)^2\]
-<svg viewBox="0 0 137 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
-<for i in range(1)><rect width="2.5" height="2.5" x="{{1+i*1.25}}" y="{{1+i*0.625}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(2)><rect width="5" height="5" x="{{4.75+i*1.25}}" y="{{1+i*0.625}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(3)><rect width="7.5" height="7.5" x="{{12.25+i*1.25}}" y="{{1+i*0.625}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(4)><rect width="10" height="10" x="{{23.5+i*1.25}}" y="{{1+i*0.625}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(5)><rect width="12.5" height="12.5" x="{{38.5+i*1.25}}" y="{{1+i*0.625}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(6)><rect width="15" height="15" x="{{57.25+i*1.25}}" y="{{1+i*0.625}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(7)><rect width="17.5" height="17.5" x="{{79.75+i*1.25}}" y="{{1+i*0.625}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
-<for i in range(8)><rect width="20" height="20" x="{{106+i*1.25}}" y="{{1+i*0.625}}" fill="#BE0AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+\[n=7\]
+\[1^3+2^3+\dots+7^3 = (1+2+\dots+7)^2\]
+<svg viewBox="0 0 129 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
+<for i in range(1)><rect width="3" height="3" x="{{1+i*1.5}}" y="{{1+i*0.75}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(2)><rect width="6" height="6" x="{{5.5+i*1.5}}" y="{{1+i*0.75}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(3)><rect width="9" height="9" x="{{14.5+i*1.5}}" y="{{1+i*0.75}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(4)><rect width="12" height="12" x="{{28+i*1.5}}" y="{{1+i*0.75}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(5)><rect width="15" height="15" x="{{46+i*1.5}}" y="{{1+i*0.75}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(6)><rect width="18" height="18" x="{{68.5+i*1.5}}" y="{{1+i*0.75}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(7)><rect width="21" height="21" x="{{95.5+i*1.5}}" y="{{1+i*0.75}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
 </svg>
 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
 <rect width="98" height="98" x="1" y="1" fill="white" />
-<for x in range(37)>
-<line x1="{{1+2.5*x}}" y1="1" x2="{{1+2.5*x}}" y2="91" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for x in range(29)>
+<line x1="{{1+3*x}}" y1="1" x2="{{1+3*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
-<for y in range(37)>
-<line x1="1" y1="{{1+2.5*y}}" x2="91" y2="{{1+2.5*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+<for y in range(29)>
+<line x1="1" y1="{{1+3*y}}" x2="85" y2="{{1+3*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
 </for>
 </svg>
+<newslide>
+\[n=7\]
+\[1^3+2^3+\dots+7^3 = (1+2+\dots+7)^2\]
+<svg viewBox="0 0 129 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;right:55vw;top:26vh">
+<for i in range(1)><rect width="3" height="3" x="{{1+i*1.5}}" y="{{1+i*0.75}}" fill="#FFD300" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(2)><rect width="6" height="6" x="{{5.5+i*1.5}}" y="{{1+i*0.75}}" fill="#DEFF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(3)><rect width="9" height="9" x="{{14.5+i*1.5}}" y="{{1+i*0.75}}" fill="#A1FF0A" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(4)><rect width="12" height="12" x="{{28+i*1.5}}" y="{{1+i*0.75}}" fill="#0AFF99" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(5)><rect width="15" height="15" x="{{46+i*1.5}}" y="{{1+i*0.75}}" fill="#0AEFFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(6)><rect width="18" height="18" x="{{68.5+i*1.5}}" y="{{1+i*0.75}}" fill="#147DF5" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+<for i in range(7)><rect width="21" height="21" x="{{95.5+i*1.5}}" y="{{1+i*0.75}}" fill="#580AFF" stroke="black" stroke-width="0.2%" stroke-linecap="round" /></for>
+</svg>
+<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" height="55vh" style="position:absolute;left:55vw;top:26vh">
+<rect width="98" height="98" x="1" y="1" fill="white" />
+<for x in range(29)>
+<line x1="{{1+3*x}}" y1="1" x2="{{1+3*x}}" y2="85" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
+<for y in range(29)>
+<line x1="1" y1="{{1+3*y}}" x2="85" y2="{{1+3*y}}" stroke="black" stroke-width="0.2%" stroke-linecap="round" />
+</for>
+</svg>
+<div style='position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);color:red;font-size:10vh'>
+IMPOSSIBLE
+</div>
